// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`convertYamlProxyToObject > should convert a hysteria2 proxy object to IR 1`] = `
{
  "auth": {
    "password": "your-password",
  },
  "authPayload": undefined,
  "down": "500",
  "fast_open": undefined,
  "hop_interval": undefined,
  "host": "example.com",
  "kind": "hysteria2",
  "obfs": undefined,
  "password": "your-password",
  "port": 443,
  "ports": undefined,
  "proto": {
    "hy2": {
      "auth": undefined,
      "down": "500",
      "fast_open": undefined,
      "hop_interval": undefined,
      "obfs": undefined,
      "ports": undefined,
      "recv_window_conn": undefined,
      "up": "100",
    },
  },
  "recv_window_conn": undefined,
  "server": "example.com",
  "server_port": 443,
  "tag": "hy2-node",
  "tags": [
    "hy2-node",
  ],
  "tls": {
    "alpn": undefined,
    "enabled": true,
    "insecure": false,
    "server_name": "sub.example.com",
    "sni": "sub.example.com",
  },
  "type": "hysteria2",
  "up": "100",
  "version": "1.0.0",
}
`;

exports[`convertYamlProxyToObject > should convert a shadowsocks proxy object to IR 1`] = `
{
  "auth": {
    "method": "aes-256-gcm",
    "password": "your-password",
  },
  "host": "example.com",
  "kind": "shadowsocks",
  "method": "aes-256-gcm",
  "password": "your-password",
  "port": 8080,
  "server": "example.com",
  "server_port": 8080,
  "tag": "ss-node",
  "tags": [
    "ss-node",
  ],
  "type": "shadowsocks",
  "version": "1.0.0",
}
`;

exports[`convertYamlProxyToObject > should convert a trojan proxy object to IR 1`] = `
{
  "auth": {
    "password": "your-password",
  },
  "host": "example.com",
  "kind": "trojan",
  "password": "your-password",
  "port": 443,
  "server": "example.com",
  "server_port": 443,
  "tag": "trojan-node",
  "tags": [
    "trojan-node",
  ],
  "type": "trojan",
  "udp": true,
  "version": "1.0.0",
}
`;

exports[`convertYamlProxyToObject > should convert a vmess proxy object to IR 1`] = `
{
  "alterId": 0,
  "auth": {
    "method": "auto",
    "uuid": "your-uuid",
  },
  "ext": {
    "clash": {
      "alterId": 0,
    },
  },
  "host": "server.com",
  "kind": "vmess",
  "network": "ws",
  "port": 443,
  "security": "auto",
  "server": "server.com",
  "server_port": 443,
  "tag": "vmess-ws-tls",
  "tags": [
    "vmess-ws-tls",
  ],
  "tls": {
    "alpn": undefined,
    "enabled": true,
    "insecure": true,
    "server_name": "server.com",
    "sni": "server.com",
  },
  "transport": {
    "headers": {
      "Host": "server.com",
    },
    "path": "/path",
    "type": "ws",
  },
  "type": "vmess",
  "udp": true,
  "uuid": "your-uuid",
  "version": "1.0.0",
}
`;

exports[`convertYamlProxyToObject > should convert an http proxy object to IR 1`] = `
{
  "auth": {
    "password": "password",
    "username": "user",
  },
  "host": "proxy.example.com",
  "kind": "http",
  "port": 8080,
  "server": "proxy.example.com",
  "server_port": 8080,
  "tag": "http-proxy",
  "tags": [
    "http-proxy",
  ],
  "type": "http",
  "version": "1.0.0",
}
`;
